--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,11 +20,30 @@ env:
   MAVEN_OPTS: "-Xmx3072m -Djava.awt.headless=true"
 
 jobs:
-  foundation:
-    name: 1. Foundation Setup (Sequential)
+  foundation_matrix:
+    name: 1. Foundation - ${{ matrix.foundation_info.name }}
     if: ${{ !cancelled() }}
     runs-on: ubuntu-latest
-    timeout-minutes: 60
+    timeout-minutes: 15
+    strategy:
+      fail-fast: false
+      max-parallel: 1
+      matrix:
+        foundation_info:
+          - { name: "Admin_Job", class: "AdminJobTest" }
+          - { name: "Admin_Org", class: "AdminOrganizationTest" }
+          - { name: "Admin_Qual", class: "Admin_Qualifications_Test" }
+          - { name: "PIM_Config", class: "PIM_Configuration_Test" }
+          - { name: "PIM_Emp", class: "PIM_Employee_Test" }
+          - { name: "Admin_Users", class: "AdminUserManagementTest" }
+          - { name: "Leave_Config", class: "Leave_Configuration_Test" }
+          - { name: "Leave_Entitle", class: "Leave_Entitlements_Test" }
+          - { name: "Claim_Config", class: "Claim_Configuration_Test" }
+          - { name: "Claim_Adv", class: "Claim_Advanced_Test" }
+          - { name: "Time_Project", class: "Time_ProjectInfo_Test" }
+          - { name: "Perf_Config", class: "Performance_Configuration_Test" }
+          - { name: "Rec_Vacancies", class: "Recruitment_Vacancies_Test" }
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -43,38 +62,26 @@ jobs:
           echo "XVFB_PID=$!" >> $GITHUB_ENV
           echo "DISPLAY=:99" >> $GITHUB_ENV
 
-      - name: Run Foundation Tests (Sequential Execution)
+      - name: Run Foundation - ${{ matrix.foundation_info.name }}
         run: |
           mvn test -B \
-            -DsuiteXmlFile=testng-foundation.xml \
+            -Dtest="project_orangehrm.Test.${{ matrix.foundation_info.class }}" \
+            -Dgroups="foundation" \
             -Dbrowser=${{ env.BROWSER }} \
             -Dheadless=true \
             -Dmaven.test.failure.ignore=true
-
-      - name: Verify Foundation Results
-        if: always()
-        run: |
-          echo "=== Foundation Test Results ==="
-          if [ -d "target/allure-results" ]; then
-            echo "✓ Allure results directory exists"
-            echo "Total files: $(find target/allure-results -type f | wc -l)"
-            echo "JSON files: $(find target/allure-results -name "*.json" | wc -l)"
-            echo "Screenshots: $(find target/allure-results -name "*.png" -o -name "*-attachment*" | wc -l)"
-          else
-            echo "✗ No allure-results directory found"
-          fi
 
       - name: Upload Foundation Results
         if: success() || failure()
         uses: actions/upload-artifact@v4
         with:
-          name: allure-results-foundation
+          name: allure-results-foundation-${{ matrix.foundation_info.name }}
           path: target/allure-results
           retention-days: 3
 
   regression_matrix:
     name: 2. Regression - ${{ matrix.test_info.name }}
-    needs: foundation
+    needs: foundation_matrix
     if: ${{ !cancelled() }}
     runs-on: ubuntu-latest
     timeout-minutes: 30
@@ -156,18 +163,6 @@ jobs:
             -Dheadless=true \
             -Dmaven.test.failure.ignore=true
 
-      - name: Verify Test Results
-        if: always()
-        run: |
-          echo "=== Test Results for ${{ matrix.test_info.name }} ==="
-          if [ -d "target/allure-results" ]; then
-            echo "✓ Results generated"
-            echo "Files: $(find target/allure-results -type f | wc -l)"
-            echo "Screenshots: $(find target/allure-results -name "*.png" 2>/dev/null | wc -l)"
-          else
-            echo "✗ No results generated"
-          fi
-
       - name: Upload Regression Results
         if: success() || failure()
         uses: actions/upload-artifact@v4
@@ -230,7 +225,7 @@ jobs:
 
   report:
     name: 4. Generate Final Report
-    needs: [ foundation, regression_matrix, cleanup_matrix ]
+    needs: [ foundation_matrix, regression_matrix, cleanup_matrix ]
     if: ${{ !cancelled() }}
     runs-on: ubuntu-latest
     timeout-minutes: 15
@@ -240,9 +235,7 @@ jobs:
 
       - name: Clean Current Results
         run: |
-          rm -rf target/allure-results
-          rm -rf all-results
-          echo "✓ Cleaned current results"
+          rm -rf target/allure-results all-results
 
       - name: Download All Results
         uses: actions/download-artifact@v4
@@ -257,45 +250,25 @@ jobs:
           ref: gh-pages
           path: gh-pages
 
-      - name: Prepare Results for Generation
+      - name: Prepare Results
         timeout-minutes: 5
         run: |
           mkdir -p target/allure-results
-
-          # Copy history if exists
           if [ -d "gh-pages/history" ]; then
-            echo "✓ Copying existing history for trend..."
             cp -r gh-pages/history target/allure-results/
-            echo "  History files: $(find target/allure-results/history -type f | wc -l)"
-          else
-            echo "ℹ No history found (first run)"
           fi
-
-          # Copy new test results
-          echo "✓ Copying new test results..."
           find all-results -name "*.json" -exec cp {} target/allure-results/ \;
           find all-results -name "*.txt" -exec cp {} target/allure-results/ \;
           find all-results -name "*.png" -exec cp {} target/allure-results/ \;
-          find all-results -name "*.html" -exec cp {} target/allure-results/ \;
-
-          # Create executor info
-          rm -f target/allure-results/executor.json
           cat > target/allure-results/executor.json <<EOF
           {
             "name": "GitHub Actions",
             "type": "github",
             "url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}",
             "buildOrder": ${{ github.run_number }},
-            "buildName": "Run #${{ github.run_number }}",
-            "buildUrl": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}",
-            "reportUrl": "https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/",
-            "reportName": "Allure Report"
+            "buildName": "Run #${{ github.run_number }}"
           }
           EOF
-
-          echo "✓ Results prepared successfully"
-          echo "  Total JSON files: $(find target/allure-results -name "*.json" | wc -l)"
-          echo "  Total PNG files: $(find target/allure-results -name "*.png" | wc -l)"
 
       - name: Generate Allure Report
         uses: simple-elf/allure-report-action@master
@@ -312,22 +285,13 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: allure-history
           publish_branch: gh-pages
-          keep_files: false
 
-      - name: Add Job Summary
+      - name: Job Summary
         if: always()
         run: |
-          echo "## 📊 OrangeHRM Test Execution Summary" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "## 📊 Test Summary" >> $GITHUB_STEP_SUMMARY
           echo "| Stage | Status |" >> $GITHUB_STEP_SUMMARY
           echo "|-------|--------|" >> $GITHUB_STEP_SUMMARY
-          echo "| Foundation | ${{ needs.foundation.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Foundation | ${{ needs.foundation_matrix.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Regression | ${{ needs.regression_matrix.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Cleanup | ${{ needs.cleanup_matrix.result }} |" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### 📈 Allure Report" >> $GITHUB_STEP_SUMMARY
-          echo "**[🔗 View Full Report](https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/)** " >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "---" >> $GITHUB_STEP_SUMMARY
-          echo "**Run #${{ github.run_number }}** | Browser: ${{ env.BROWSER }} | $(date)" >> $GITHUB_STEP_SUMMARY
-#
