--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <aspectj.version>1.9.22</aspectj.version>
         <groups></groups>
+        <suiteXmlFile></suiteXmlFile>
+        <skipTests>false</skipTests>
     </properties>
 
     <dependencies>
@@ -64,7 +66,11 @@
                     <systemPropertyVariables>
                         <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
                     </systemPropertyVariables>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+                    </suiteXmlFiles>
                     <groups>${groups}</groups>
+                    <skipTests>${skipTests}</skipTests>
                 </configuration>
                 <dependencies>
                     <dependency>
